--- a/nosotros.html
+++ b/nosotros.html
@@ -48,10 +48,10 @@
                       Vehículos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./vehiculos.html">Autos</a></li>
-                      <li><a class="dropdown-item" href="#">Camionetas</a></li>
-                      <li><a class="dropdown-item" href="#">Motos</a></li>
-                      <li><a class="dropdown-item" href="#">Clásicos</a></li>
+                      <li><a class="dropdown-item" href="./autos.html">Autos</a></li>
+                      <li><a class="dropdown-item" href="./camionetas.html">Camionetas</a></li>
+                      <li><a class="dropdown-item" href="./motos.html">Motos</a></li>
+                      <li><a class="dropdown-item" href="./clasicos.html">Clásicos</a></li>
                 </ul>
               </div>
             </div>
