--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
       <h2 class="oportunidadesH2">Oportunidades</h2>
       <div class="oportunidades-index">
         <a href="">
-        <div class="card" style="width: 18rem;">
+        <div class="card oportunidades" style="width: 18rem;">
           <img src="./img/logoFord.png" class="card-img-top" alt="Logo Ford">
         </a>
         </div>
         <a href="">
-        <div class="card" style="width: 18rem;">
+        <div class="card oportunidades" style="width: 18rem;">
           <img src="./img/logoChevrolet.png" class="card-img-top" alt="Logo Chevrolet">
         </a>
         </div>
         <a href="">
-        <div class="card" style="width: 18rem;">
+        <div class="card oportunidades" style="width: 18rem;">
           <img src="./img/logoBmw.png" class="card-img-top" alt="Logo BMW">
         </a>
         </div>
