--- a/autos.html
+++ b/autos.html
@@ -44,7 +44,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Vehículos
+                  Vehiculos
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./autos.html">Autos</a></li>
