--- a/ubicacion.html
+++ b/ubicacion.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
   <a href="./index.html"><img src="./img/LogoYacocarss.png" alt="LogoYaco" class="logoYaco"></a>
-    <h1 class="display-3 text-center animate__animated animate__bounce">Camionetas disponibles</h1>
+    <h1 class="display-3 text-center animate__animated animate__bounce">Ubicación</h1>
   </header>
 
     <main>
