--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
           <div class="carousel-item active">
             <img src="./img/autos.jpg " class="d-block w-100 imgCarousel img-fluid" alt="Autos" >
             <div class="carousel-caption d-none d-md-block">
-              <button>COMPRAR AUTOS</button>
+              <a href="./autos.html"> <button> COMPRAR AUTOS</button></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./img/camioneta.jpg" class="d-block w-100 imgCarousel img-fluid" alt="Camioneta">
             <div class="carousel-caption d-none d-md-block">
-              <button>COMPRAR CAMIONETAS</button>
+              <a href="./camionetas.html"><button>COMPRAR CAMIONETAS</button></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./img/clasico.jpg" class="d-block w-100 imgCarousel img-fluid" alt="Clasico">
             <div class="carousel-caption d-none d-md-block">
-                <button>COMPRAR CLASICOS</button>
+                <a href="./clasicos.html"><button>COMPRAR CLASICOS</button></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./img/moto.jpg" class="d-block w-100 imgCarousel img-fluid" alt="Moto">
             <div class="carousel-caption d-none d-md-block">
-             <button>COMPRAR MOTOS</button>
+             <a href="./motos.html"><button>COMPRAR MOTOS</button></a>
             </div>
           </div>
         </div>
