--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <li><a href="">¿Querés trabajar con nosotros?</a></li>
   <li> <a href="">Preguntas frecuentes</a></li>
   <li> <a href="">Términos y Condiciones</a></li>
-  <li><a href="">Política de Privacidad</a></li>
+  <li><a href="./politica.html">Política de Privacidad</a></li>
 </ul>
 
   <div class="card-header footerTexto">
