--- a/nosotros.html
+++ b/nosotros.html
@@ -82,6 +82,7 @@
           
         </div>
       </section>
+
       <section class="seccion1-nosotros">
         <h2 class="display-2 h2-nosotros animate__animated animate__jackInTheBox">Misión</h2>
         <div class="nosotros-container">
@@ -116,7 +117,7 @@
     <li><a href="">¿Querés trabajar con nosotros?</a></li>
     <li> <a href="">Preguntas frecuentes</a></li>
     <li> <a href="">Términos y Condiciones</a></li>
-    <li><a href="">Política de Privacidad</a></li>
+    <li><a href="./politica.html">Política de Privacidad</a></li>
   </ul>
    
     <div class="card-header footerTexto">
