--- a/politica.html
+++ b/politica.html
@@ -18,7 +18,8 @@
     
     <title>Yaco cars</title>
 </head>
-
+<body>
+    
 <!-- HEADER -->
 <header>
     <nav class="navbar navbar-expand-lg nav1">
@@ -107,4 +108,8 @@ Sin embargo, teniendo en cuenta la velocidad de desarrollo de la tecnología inf
     <div class="card-header footerTexto">
       YacoCars es una propiedad de Franco Giacobino - Todos los derechos reservados
     </div>
-  
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
+</html>
