--- a/politica.html
+++ b/politica.html
@@ -100,7 +100,7 @@ Sin embargo, teniendo en cuenta la velocidad de desarrollo de la tecnología inf
   <div class="card text-center enlacesFooter">
       <ul>
     <li><a href="">¿Querés trabajar con nosotros?</a></li>
-    <li> <a href="">Preguntas frecuentes</a></li>
+    <li> <a href="./preguntas.html">Preguntas frecuentes</a></li>
     <li> <a href="">Términos y Condiciones</a></li>
     <li><a href="./politica.html">Política de Privacidad</a></li>
   </ul>
