--- a/nosotros.html
+++ b/nosotros.html
@@ -114,8 +114,8 @@
         <a href="https://www.instagram.com" target="_blank"><img class="instaLogo" src="./img/aOsHknZja.png" alt="logo instagram" ></a>
     </div>
       <ul>
-    <li><a href="">¿Querés trabajar con nosotros?</a></li>
-    <li> <a href="">Preguntas frecuentes</a></li>
+    <li><a href="./trabaja.html">¿Querés trabajar con nosotros?</a></li>
+    <li> <a href="./preguntas.html">Preguntas frecuentes</a></li>
     <li> <a href="">Términos y Condiciones</a></li>
     <li><a href="./politica.html">Política de Privacidad</a></li>
   </ul>
