--- a/ubicacion.html
+++ b/ubicacion.html
@@ -140,10 +140,10 @@
     </div>
     <div class="card text-center enlacesFooter">
         <ul>
-      <li><a href="">¿Querés trabajar con nosotros?</a></li>
-      <li> <a href="">Preguntas frecuentes</a></li>
+      <li><a href="./trabaja.html">¿Querés trabajar con nosotros?</a></li>
+      <li> <a href="./preguntas.html">Preguntas frecuentes</a></li>
       <li> <a href="">Términos y Condiciones</a></li>
-      <li><a href="">Política de Privacidad</a></li>
+      <li><a href="./politica.html">Política de Privacidad</a></li>
     </ul>
    
       <div class="card-header footerTexto">
