--- a/autos.html
+++ b/autos.html
@@ -192,8 +192,8 @@
     </div>
     <div class="card text-center enlacesFooter">
         <ul>
-      <li><a href="">¿Querés trabajar con nosotros?</a></li>
-      <li> <a href="">Preguntas frecuentes</a></li>
+      <li><a href="./trabaja.html">¿Querés trabajar con nosotros?</a></li>
+      <li> <a href="./preguntas.html">Preguntas frecuentes</a></li>
       <li> <a href="">Términos y Condiciones</a></li>
       <li><a href="./politica.html">Política de Privacidad</a></li>
     </ul>
