--- a/nosotros.html
+++ b/nosotros.html
@@ -116,7 +116,7 @@
       <ul>
     <li><a href="./trabaja.html">¿Querés trabajar con nosotros?</a></li>
     <li> <a href="./preguntas.html">Preguntas frecuentes</a></li>
-    <li> <a href="">Términos y Condiciones</a></li>
+    <li> <a href="./terminos.html">Términos y Condiciones</a></li>
     <li><a href="./politica.html">Política de Privacidad</a></li>
   </ul>
    
