--- a/terminos.html
+++ b/terminos.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
     <a href="./index.html"><img src="./img/LogoYacocarss.png" alt="LogoYaco" class="logoYaco"></a>
-        <h1 class="display-3 text-center animate__animated animate__bounce">Trabaja con nosotros</h1>
+        <h1 class="display-3 text-center animate__animated animate__bounce">Terminos y condiciones</h1>
       </header>
 <main>
     <div class="terminosYcondiciones">
