--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="card" style="width: 18rem;">
         <img src="./img/fordecosport.webp" class="card-img-top img-fluid" alt="Ecosport">
         <div class="card-body">
-          <h5 class="card-title">Ford ecosport Titanium</h5>
+          <h5 class="card-title">Ford ecosport</h5>
           <p class="card-text"></p>
         </div>
         <ul class="list-group list-group-flush">
