--- a/clasicos.html
+++ b/clasicos.html
@@ -166,7 +166,7 @@
          <div class="card animate__animated animate__flip" style="width: 18rem;">
           <img src="./img/camaro1970.webp" class="card-img-top" alt="Chevrolet Camaro">
           <div class="card-body">
-            <h5 class="card-title">Fiat Toro</h5>
+            <h5 class="card-title">Camaro SS</h5>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item listita">Motor 2.0</li>
@@ -176,7 +176,30 @@
             <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=CE9vUbJ8HD4" class="card-link" target="_blank">Especificaciones</a></li>
           </ul>
           <div class="card-body">
-            <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
+            <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Gracias</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        En la brevedad nos pondremos en contacto.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+            
           </div>
         </div>
   </div>
