--- a/autos.html
+++ b/autos.html
@@ -77,10 +77,13 @@
         <li class="list-group-item listita"><a href="https://www.youtube.com/watch?v=0XZYzOS__Xk" class="card-link" target="_blank">Especificaciones</a></li>
       </ul>
       <div class="card-body">
-        <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-      </div>
-    </div>
-    </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
 
     <!-- Ford Focus III 2.0 Sedan -->
     <div class="col-xl-3 col-md-6 col-xs-12">
@@ -97,10 +100,13 @@
         <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=iY8q8Sy1WBs" class="card-link" target="_blank">Especificaciones</a></li>
       </ul>
       <div class="card-body">
-        <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-      </div>
-    </div>
-        </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
 
 
     <!-- Corolla -->
@@ -118,10 +124,13 @@
         <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=c5HLIBU5qzQ" class="card-link" target="_blank">Especificaciones</a></li>
       </ul>
       <div class="card-body">
-        <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-      </div>
-    </div>
-       </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
         <!-- Onix -->
         <div class="col-xl-3 col-md-6 col-xs-12">
         <div class="card animate__animated animate__flip" style="width: 18rem;">
@@ -137,10 +146,13 @@
             <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=b2I7PmYCBTs" class="card-link" target="_blank">Especificaciones</a></li>
           </ul>
           <div class="card-body">
-            <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-          </div>
-        </div>
-        </div>
+   <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
         <!-- Toyota Etios -->
         <div class="col-xl-3 col-md-6 col-xs-12">
         <div class="card animate__animated animate__flip" style="width: 18rem;">
@@ -156,10 +168,13 @@
             <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=X2htjXdprvk" class="card-link" target="_blank">Especificaciones</a></li>
           </ul>
           <div class="card-body">
-            <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-          </div>
-        </div>
-        </div>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
 
          <!-- Fiat Cronos -->
          <div class="col-xl-3 col-md-6 col-xs-12">
@@ -176,10 +191,31 @@
             <li class="list-group-item listita"> <a href="https://www.youtube.com/watch?v=oyIvTVWptsc" class="card-link" target="_blank">Especificaciones</a></li>
           </ul>
           <div class="card-body">
-            <button type="button" class="btn btn-primary boton-vehiculo">COMPRAR</button>
-          </div>
-        </div>
+   <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary boton-vehiculo" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  COMPRAR
+</button>
+</div>
+</div>
+</div>
+
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Gracias</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>En la brevedad nos pondremos en contacto</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
   </div>
+</div>
 
     </main>
        
