--- a/autos.html
+++ b/autos.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
       <a href="./index.html"><img src="./img/LogoYacocarss.png" alt="LogoYaco" class="logoYaco"></a>
-        <h1 class="display-3 text-center animate__animated animate__bounce">Vehículos disponibles</h1>
+        <h1 class="display-3 text-center animate__animated animate__bounce">Autos disponibles</h1>
       </header>
         
     <!-- Sección Vehiculos 1 -->
