--- a/preguntas.html
+++ b/preguntas.html
@@ -79,7 +79,7 @@
           ¿YacoCars vende autos 0km?
         </h3>
       </div>
-      <p class="text-center"> Sí, Car One es el primer megadealer automotriz de la Argentina. Además de autos usados,
+      <p class="text-center"> Sí, YacoCars es el primer megadealer automotriz de la Argentina. Además de autos usados,
         tiene 5 concesionarios propios para la venta de 0 Km
 
       </p>
